manifests/todos/overlays/staging/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app-dep
  namespace: staging-project
spec:
  replicas: 2
