manifests/todos/overlays/staging/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: staging-project
  name: frontend-app-dep
