manifests/todos/overlays/staging/postgres-sset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: staging-project
