manifests/todos/overlays/staging/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: staging-project
  name: todo-backend-svc
