manifests/todos/overlays/staging/broadcaster-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: staging-project
  name: todo-broadcaster-svc
