manifests/todos/overlays/staging/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: staging-project
  name: todo-frontend-svc
